--- a/src/main/res/menu/edit_multiline.xml
+++ b/src/main/res/menu/edit_multiline.xml
@@ -40,12 +40,6 @@
         android:icon="@drawable/ic_action_delete_point"
         android:title="@string/delete_point"
         app:showAsAction="ifRoom"/>
-    <!-- TODO: item
-        android:id="@+id/menu_edit_track"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_maps_directions_walk"
-        android:title="@string/write_track"
-        /-->
     <item
         android:id="@+id/menu_edit_move_point_to_center"
         android:icon="@drawable/ic_action_move_point_to_center"
@@ -55,5 +49,10 @@
         android:id="@+id/menu_edit_move_point_to_current_location"
         android:icon="@drawable/ic_action_move_point_to_location"
         android:title="@string/move_point_to_current_location"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/menu_edit_by_walk"
+        android:icon="@drawable/ic_action_maps_directions_walk"
+        android:title="@string/edit_by_walk"
         app:showAsAction="ifRoom"/>
 </menu>
