--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -32,6 +32,8 @@
     <attr name="ic_action_visibility_off" format="reference"/>
     <attr name="ic_action_delete_inverse" format="reference"/>
     <attr name="ic_action_delete" format="reference"/>
+    <attr name="ic_action_edit_inverse" format="reference"/>
+    <attr name="ic_action_edit" format="reference"/>
     <attr name="ic_action_content_select_all_inverse" format="reference"/>
     <attr name="ic_action_content_select_all" format="reference"/>
     <attr name="ic_menu_moreoverflow_inverse" format="reference"/>
@@ -82,6 +84,8 @@
         <item name="ic_action_visibility_off">@drawable/ic_action_visibility_off_light</item>
         <item name="ic_action_delete_inverse">@drawable/ic_action_delete_dark</item>
         <item name="ic_action_delete">@drawable/ic_action_delete_light</item>
+        <item name="ic_action_edit_inverse">@drawable/ic_action_edit_dark</item>
+        <item name="ic_action_edit">@drawable/ic_action_edit_light</item>
         <item name="ic_action_content_select_all_inverse">@drawable/ic_action_content_select_all_dark</item>
         <item name="ic_action_content_select_all">@drawable/ic_action_content_select_all_light</item>
         <item name="ic_menu_moreoverflow_inverse">@drawable/ic_menu_moreoverflow_dark</item>
@@ -126,6 +130,8 @@
         <item name="ic_action_visibility_off">@drawable/ic_action_visibility_off_dark</item>
         <item name="ic_action_delete_inverse">@drawable/ic_action_delete_light</item>
         <item name="ic_action_delete">@drawable/ic_action_delete_dark</item>
+        <item name="ic_action_edit_inverse">@drawable/ic_action_edit_light</item>
+        <item name="ic_action_edit">@drawable/ic_action_edit_dark</item>
         <item name="ic_action_content_select_all_inverse">@drawable/ic_action_content_select_all_light</item>
         <item name="ic_action_content_select_all">@drawable/ic_action_content_select_all_dark</item>
         <item name="ic_menu_moreoverflow_inverse">@drawable/ic_menu_moreoverflow_light</item>
