--- a/src/main/res/layout/fragment_layer_general.xml
+++ b/src/main/res/layout/fragment_layer_general.xml
@@ -58,7 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:visibility="gone"/>
 
         <TextView
             style="?android:attr/listSeparatorTextViewStyle"
