--- a/src/main/res/layout/fragment_vector_layer_style.xml
+++ b/src/main/res/layout/fragment_vector_layer_style.xml
@@ -20,26 +20,7 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/displaySettings"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fill_color"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <include
-        layout="@layout/row_color"/>
-</LinearLayout>
+    android:layout_height="match_parent"/>
