--- a/src/main/res/layout/style_polygon.xml
+++ b/src/main/res/layout/style_polygon.xml
@@ -24,13 +24,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fill_color"
+        android:text="@string/stroke_color"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <LinearLayout
@@ -44,7 +44,6 @@
             android:id="@+id/color_fill_ring"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:src="@drawable/color_ring"/>
 
         <TextView
@@ -54,4 +53,27 @@
             android:layout_weight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width='match_parent'
+        android:layout_height='wrap_content'
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:text="@string/width"
+        android:textAppearance='?android:attr/textAppearanceMedium'/>
+
+    <EditText
+        android:id="@+id/width"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
+
+    <CheckBox
+        android:id="@+id/fill"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:text="@string/fill"
+        android:textAppearance='?android:attr/textAppearanceMedium'/>
 </LinearLayout>
