--- a/src/main/res/layout/style_marker.xml
+++ b/src/main/res/layout/style_marker.xml
@@ -24,12 +24,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <TextView
+        android:layout_width='match_parent'
+        android:layout_height='wrap_content'
+        android:gravity="center_vertical"
+        android:text="@string/size"
+        android:textAppearance='?android:attr/textAppearanceMedium'/>
+
+    <EditText
+        android:id="@+id/size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
+
+    <TextView
+        android:layout_width='match_parent'
+        android:layout_height='wrap_content'
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:text="@string/type"
+        android:textAppearance='?android:attr/textAppearanceMedium'/>
+
+    <Spinner
+        android:id="@+id/type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/marker_type"
+        android:padding="5dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="8dp"
         android:text="@string/fill_color"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
@@ -44,7 +73,6 @@
             android:id="@+id/color_fill_ring"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:src="@drawable/color_ring"/>
 
         <TextView
@@ -58,7 +86,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="8dp"
         android:text="@string/stroke_color"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
@@ -73,7 +101,6 @@
             android:id="@+id/color_stroke_ring"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:src="@drawable/color_ring"/>
 
         <TextView
@@ -83,4 +110,17 @@
             android:layout_weight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/width"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+    <EditText
+        android:id="@+id/width"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
 </LinearLayout>
