Add rule renderer to settings, #157

--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -191,4 +191,8 @@
         <item>@string/type_edit_circle</item>
         <item>@string/type_crossed_box</item>
     </string-array>
+    <string-array name="renderers" translatable="false">
+        <item>@string/simple_renderer</item>
+        <item>@string/rule_renderer</item>
+    </string-array>
 </resources>
