--- a/src/main/res/layout/fragment_vector_layer_style.xml
+++ b/src/main/res/layout/fragment_vector_layer_style.xml
@@ -23,4 +23,33 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:padding="8dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width='match_parent'
+            android:layout_height='wrap_content'
+            android:gravity="center_vertical"
+            android:text="@string/renderer"
+            android:textAppearance='?android:attr/textAppearanceMedium'/>
+
+        <Spinner
+            android:id="@+id/renderer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:entries="@array/renderers"
+            android:padding="5dp"/>
+
+        <FrameLayout
+            android:id="@+id/settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="-10dp"/>
+    </LinearLayout>
+</ScrollView>
