--- a/src/main/res/layout/style_line.xml
+++ b/src/main/res/layout/style_line.xml
@@ -24,8 +24,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
