--- a/src/main/res/layout/style_rules.xml
+++ b/src/main/res/layout/style_rules.xml
@@ -26,53 +26,49 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/default_style"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stroke_color"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <LinearLayout
-        android:id="@+id/color_fill"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/color_fill_ring"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/color_ring"/>
-
-        <TextView
-            android:id="@+id/color_fill_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
-    </LinearLayout>
+        android:layout_marginBottom="8dp"
+        android:text="@string/default_style"/>
 
     <TextView
         android:layout_width='match_parent'
         android:layout_height='wrap_content'
-        android:layout_marginTop="8dp"
         android:gravity="center_vertical"
-        android:text="@string/width"
+        android:text="@string/field_name"
         android:textAppearance='?android:attr/textAppearanceMedium'/>
 
-    <EditText
-        android:id="@+id/width"
+    <Spinner
+        android:id="@+id/field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"/>
+        android:padding="5dp"/>
 
-    <CheckBox
-        android:id="@+id/fill"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center_vertical"
-        android:text="@string/fill"
-        android:textAppearance='?android:attr/textAppearanceMedium'/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width='match_parent'
+            android:layout_height='48dp'
+            android:gravity="center_vertical"
+            android:text="@string/rules"/>
+
+        <Button
+            android:id="@+id/new_rule"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@string/new_tms"/>
+    </FrameLayout>
+
+    <ListView
+        android:id="@+id/rules"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
