--- a/src/main/res/layout/fragment_vector_layer_style.xml
+++ b/src/main/res/layout/fragment_vector_layer_style.xml
@@ -23,8 +23,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +34,7 @@
             android:layout_width='match_parent'
             android:layout_height='wrap_content'
             android:gravity="center_vertical"
+            android:padding="8dp"
             android:text="@string/renderer"
             android:textAppearance='?android:attr/textAppearanceMedium'/>
 
@@ -49,7 +49,6 @@
         <FrameLayout
             android:id="@+id/settings"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="-10dp"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </ScrollView>
