--- a/src/main/res/layout/style_rules.xml
+++ b/src/main/res/layout/style_rules.xml
@@ -24,7 +24,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <Button
         android:id="@+id/default_style"
