--- a/src/main/res/layout/row_resourcegroup.xml
+++ b/src/main/res/layout/row_resourcegroup.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -22,49 +22,45 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/resourcegroup_row"
-              android:orientation="horizontal"
+<LinearLayout android:id="@+id/resourcegroup_row"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
-    >
+              android:minHeight="?attr/listPreferredItemHeightSmall"
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="32dp"
         android:layout_height="fill_parent"
-        android:layout_margin="5dp"
         android:layout_gravity="center"
-        />
+        android:layout_margin="5dp"/>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
             android:layout_weight="1"
+            android:ellipsize="marquee"
             android:gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:ellipsize="marquee"
-            android:textStyle="bold"
-            android:layout_margin="2dp"
-            />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:ellipsize="marquee"
             android:layout_margin="2dp"
-            />
+            android:layout_weight="0"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
     </LinearLayout>
-
 </LinearLayout>
