--- a/src/main/res/values/loaders.xml
+++ b/src/main/res/values/loaders.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -24,5 +24,7 @@
 
 <resources>
     <item name="auth_token_loader"
+          type="id"/>
+    <item name="non_auth_token_loader"
           type="id"/>
 </resources>
