--- a/src/main/res/layout/list_content.xml
+++ b/src/main/res/layout/list_content.xml
@@ -66,7 +66,7 @@
             app:queryHint="@android:string/search_go"/>
 
         <ListView
-            android:id="@android:id/list"
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
